--- a/Front/View/album.html
+++ b/Front/View/album.html
@@ -27,6 +27,7 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
+        <button id="share">Partager</button>
       </div>
 </main>
 
