--- a/Front/View/home.html
+++ b/Front/View/home.html
@@ -6,7 +6,7 @@
           <h5 class="card-title">Card title</h5>
           <p class="card-text">date : JUILLET</p>
           <p class="card-text">lieux : Italie</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="./album.html" class="btn btn-primary">Voir</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
