--- a/Front/View/login.html
+++ b/Front/View/login.html
@@ -1,7 +1,3 @@
-<?php
-    require 'C:\wamp64\www\app-photo-album\Back\Controller\login.php';
-?>
-
 <main>
     <input id="email">Email</a>
     <input id="password">Mot de passe</a>
@@ -11,6 +7,6 @@
             Se souvenir de moi ?
         </label>
     </div>
-    <button href="View\home.html">Se Connecter</button>
-    <a href="View\inscription.html" class="btn btn-primary">pas de compte ? S'inscrire</a>
+    <button href="./home.html">Se Connecter</button>
+    <a href="./inscription.php" class="btn btn-primary">pas de compte ? S'inscrire</a>
 </main>
