--- a/Front/View/partager.html
+++ b/Front/View/partager.html
@@ -1,4 +1,20 @@
 <main>
-    <a>A qui voulez vous partager cette album ?</a>
-    <input id="email">
+    <div class="modal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Partager</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>A qui voulez vous partager cette album ?</p>
+                    <input id="email">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Partager</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
