--- a/Front/View/album.html
+++ b/Front/View/album.html
@@ -1,6 +1,6 @@
 <main>
     <button>Modifier</button>
-    <button href="View\partager.html">Partager</button>
+    <button href="./partager.html">Partager</button>
     <h3>Title</h3>
     <button>Supprimer</button>
     <h4>Date</h4>
@@ -27,7 +27,7 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-        <button id="share">Partager</button>
+        <button hrf="./partager.html" id="share">Partager</button>
       </div>
 </main>
 
