--- a/Front/View/acceuil.html
+++ b/Front/View/acceuil.html
@@ -4,25 +4,25 @@
         <meta charset="utf-8">
         <meta name="viewport" content=""width=device-width, initial-scale="1">
         <title>Album Photo</title>
-        <link rel="stylsheet" href="C:View\style.css">
+        <link rel="stylsheet" href="../Style/acceuil.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
-        <header id="banner">
+        <!-- <header id="banner">
             <image id="logo"></image>
             <H3 id="title">Albopho</H3>
             <button type="button" class="btn btn-primary">Se Connecter</button>
-        </header>
-        <main>
+        </header> -->
+        <main id="acceuil" style="display: grid;">
             <h2>Album Photo</h2>
             <img>
             <h4>Composer et partager tous vos souvenir avec votre famille et amis. Que se soit des vacances ou bien même les années passées, votre album vous permet de vous commémorer les lieux et moments clé.</h4>
             <a>Venez composé un album de vos meilleur moments</a>
         </main>
-        <footer>
+        <!-- <footer>
             <a>Projet de fin d'année</a>
             <a>Lucie Josse</a>
-        </footer>
+        </footer> -->
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
