--- a/Front/View/inscription.html
+++ b/Front/View/inscription.html
@@ -20,14 +20,14 @@
             </label>
         </div>
         <button>S'inscrire</button> -->
-        <form action="" method="post" enctype="multipart/form-data" class="register-display">
+        <form action="" method="post" enctype="multipart/form-data" class="register-display" style="display: flex; flex-direction: column; align-items: center; background-color: rgb(96, 182, 235);">
             <div class="register-disp">
                 <label for="nom" class="login-label">Nom</label>
                 <input type="text" placeholder="Nom" name="nom" class="register-input">
             </div>
             <div class="register-disp">
-                <label for="prenom" class="register-label">Prénom</label>
-                <input type="text" placeholder="Prénom" name="prenom" class="register-input">
+                <label for="prenom" class="register-label">Prenom</label>
+                <input type="text" placeholder="Prenom" name="prenom" class="register-input">
             </div>
             <div class="register-disp">
                 <label for="email" class="register-label">E-mail</label>
