--- a/frontend/assets/css/styles.css
+++ b/frontend/assets/css/styles.css
@@ -1,83 +1,128 @@
 #header {
-    width: 100%;
+  width: 100%;
 }
 
 #navbar {
-    display: grid;
-    grid-template-columns: 80% 20%;
-    background-color: rgb(255, 191, 107);
+  display: grid;
+  grid-template-columns: 90% 10%;
+  background-color: rgb(96, 182, 235);
 }
 
-.navbar__logo, .navbar__login {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    list-style-type: none;
+.navbar__logo,
+.navbar__login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  list-style-type: none;
+}
+
+.navbar__signup__logo {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  padding: 1rem 0 1rem 0;
 }
 
 .navbar__logo {
-    padding-left: 5rem;
+  padding-left: 5rem;
+}
+#logo {
+  size-adjust: 50px;
 }
 
 .navbar__login {
-    padding-left: 2.5rem;
+  padding-left: 2.5rem;
 }
 
-#main {
-    min-height: 100vh;
+#home,
+#dashboard,
+#album {
+  min-height: 100vh;
 }
 
-#signup {
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    padding: 0;
-    margin: 0;
-    display: flex; 
-    flex-direction: column; 
-    align-items: center; 
-    justify-content: center;
-    background-color: rgb(96, 182, 235);
+#home {
+  background-image: url("../../../public/images/background.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.home__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 2.5rem 0 0 0;
+}
+
+.home__title,
+.home__subtitle {
+  text-align: center;
+  padding: 1rem 0 1rem 0;
+}
+
+#signup,
+#signin {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(96, 182, 235);
 }
 
 .signup__form__item {
-    display: flex;
-    flex-direction: column;
-    padding: 0.5rem 0 0.5rem 0;
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem 0 0.5rem 0;
 }
 
-.signup__form__reminder, .signup__form__signin {
-    display: flex;
-    justify-content: center;
-    padding: 0.25rem 0 0.25rem 0;
+.signup__form__reminder,
+.signup__form__signin {
+  display: flex;
+  justify-content: center;
+  padding: 0.25rem 0 0.25rem 0;
 }
 
-#signin {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: rgb(96, 182, 235);
+.signin__register-disp {
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem 0 0.5rem 0;
+}
+.signin__register-label {
+  display: flex;
+  justify-content: center;
+  padding: 0.25rem 0 0.25rem 0;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: rgb(96, 182, 235);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(96, 182, 235);
 }
 
 #title {
-    font-size: 2em;
-    font-weight: 1000;
+  font-size: 2em;
+  font-weight: 1000;
 }
 
 #footer {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(255, 191, 107);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(96, 182, 235);
+  padding: 1rem 0 1rem 0;
 }
